# auto_code_review

./: .env.example  .gitignore  package-lock.json  package.json  pyproject.toml  start.bat
docs/: rules_android_seed.md  v1_plan.md
docs/stages/: stage_0_endpoint_check.md  stage_0_goal.md  stage_1_goal.md  stage_1_review.md  stage_1_spec.md  stage_2_goal.md  stage_2_review.md  stage_3_review.md  stage_4_review.md  stage_5_review.md
docs/templates/: rule_extraction_prompt.md
examples/stage_1_demo/: change.diff
rules/bug_history/: README.md
rules/typical_case/: RULE-RESOURCE-001.yaml
scripts/: case_coverage.py  publish_review.py  review.py  review_shards.py  rules_audit.py  serve.py  step0_endpoint_check.py  step0_local_cli.py  verify_stage5_ui.js  verify_ui_scroll.js
skills/: code_review.md
src/ai_code_review/: __init__.py  pipeline.py  workspace.py
tests/cases/: README.md
tests/integration/: test_github_source_live.py
tests/stage_0/: test_endpoint_config.py
tests/stage_1/: test_case_loader.py  test_diff_parser.py  test_diff_sources.py  test_github_source.py  test_output_parser.py  test_pipeline.py  test_prompt_builder.py  test_report_builder.py  test_rule_loader.py  test_rule_recaller.py  test_workspace_detect.py
tests/stage_2/: test_android_case_fixtures.py  test_android_rules.py  test_case_coverage.py  test_review_shards.py  test_rule_audit.py
tests/stage_3/: test_finding_validator.py
tests/stage_4/: test_gerrit_source.py  (+4 more)
ui/: app.jsx  data.js  glue.js  icons.jsx  index.html  screens-other.jsx  screens-review.jsx  styles.css
(+77 files in other folders)
